--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
 <body>
     <div class="top">
-        <img class="top-cloud" src="images/cloud.png" alt="cloud image">
+        <img class="top-cloud" src="Images/cloud.png" alt="cloud image">
         <h1>I'm Bryan</h1>
         <h2>An Instructional Designer</h2>
-        <img class="bottom-cloud" src="images/cloud.png" alt="cloud image">
-        <img src="images/mountain.png" alt="mountain image">
+        <img class="bottom-cloud" src="Images/cloud.png" alt="cloud image">
+        <img src="Images/mountain.png" alt="mountain image">
     </div>
 
     <div class="middle-container">
