Updated a href to open in new tab

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
     </div>
     <div class="bottom-container">
         <p class="p-footer">
-            <a class="footer-link" href="https://www.linkedin.com/in/bryan-woerner/">LinkedIn</a>
-            <a class="footer-link" href="https://www.atlasobscura.com/users/bryanwoerner">Atlas Obscura</a>
-            <a class="footer-link" href="https://github.com/bmw1138">GitHub</a>
+            <a class="footer-link" href="https://www.linkedin.com/in/bryan-woerner/" target="_blank">LinkedIn</a>
+            <a class="footer-link" href="https://www.atlasobscura.com/users/bryanwoerner" target="_blank">Atlas Obscura</a>
+            <a class="footer-link" href="https://github.com/bmw1138" target="_blank">GitHub</a>
         <p class="copyright">© 2023 Bryan Woerner</p>
             <a class="credit-link" href="credits.html">Credits</a>
         </p>
