--- a/credits.html
+++ b/credits.html
@@ -12,12 +12,12 @@
         rel="stylesheet">
 </head>
 <body>
-    <p><a href="https://www.flaticon.com/free-icons/microsoft-office" title="microsoft office icons">Microsoft office icons created by Pixel perfect - Flaticon</a></p>
-    <p><a href="https://www.flaticon.com/free-icons/video-editor" title="video editor icons">Video editor icons created by Soremba - Flaticon</a></p>
-    <p><a href="https://www.flaticon.com/free-icons/education" title="education icons">Education icons created by prettycons - Flaticon</a></p>
-    <p><a href="https://www.flaticon.com/free-icons/html" title="html icons">Html icons created by Prosymbols Premium - Flaticon</a></p>
-    <p><a href="https://www.flaticon.com/free-icons/toilet" title="toilet icons">Toilet icons created by Freepik - Flaticon</a></p>
-    <p><a href="https://www.favicon.cc/?action=icon&file_id=225516" title="purple dino favicon">Purple Dino favicon from favicon.cc</a></p>
+    <p><a href="https://www.flaticon.com/free-icons/microsoft-office" target="_blank" title="microsoft office icons">Microsoft office icons created by Pixel perfect - Flaticon</a></p>
+    <p><a href="https://www.flaticon.com/free-icons/video-editor" target="_blank" title="video editor icons">Video editor icons created by Soremba - Flaticon</a></p>
+    <p><a href="https://www.flaticon.com/free-icons/education" target="_blank" title="education icons">Education icons created by prettycons - Flaticon</a></p>
+    <p><a href="https://www.flaticon.com/free-icons/html" target="_blank" title="html icons">Html icons created by Prosymbols Premium - Flaticon</a></p>
+    <p><a href="https://www.flaticon.com/free-icons/toilet" target="_blank" title="toilet icons">Toilet icons created by Freepik - Flaticon</a></p>
+    <p><a href="https://www.favicon.cc/?action=icon&file_id=225516" target="_blank" title="purple dino favicon">Purple Dino favicon from favicon.cc</a></p>
     
 </body>
 </html>
